--- a/requirements.txt
+++ b/requirements.txt
@@ -20,13 +20,17 @@ grpcio-status==1.43.0
 httplib2==0.20.2
 idna==3.3
 msgpack==1.0.3
+numpy==1.21.5
 packaging==21.3
+pandas==1.3.5
 Pillow==8.4.0
 proto-plus==1.19.8
 protobuf==3.19.1
 pyasn1==0.4.8
 pyasn1-modules==0.2.8
 pyparsing==3.0.6
+python-dateutil==2.8.2
+pytz==2021.3
 requests==2.26.0
 RPi.GPIO==0.7.0
 rsa==4.8
